// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Item 1`] = `
.pf-c-breadcrumb__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: undefined;
  color: #393f44;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item"
>
  Section
</li>
`;

exports[`Breadcrumb Item Divider 1`] = `
.pf-c-breadcrumb__item-divider {
  display: block;
  margin-left: 0.5rem;
  font-size: 0.875rem;
  line-height: 1;
  color: #393f44;
}

<span
  className="pf-c-breadcrumb__item-divider"
>
  <AngleRightIcon
    color="currentColor"
    size="sm"
    title={null}
  />
</span>
`;

exports[`Breadcrumb Link 1`] = `
.pf-c-breadcrumb__link {
  display: block;
  font-size: inherit;
  font-weight: 500;
  line-height: inherit;
  color: #007bba;
  text-decoration: underline;
}

<a
  className="pf-c-breadcrumb__link"
  href="#"
>
  Section Link
</a>
`;

exports[`Breadcrumb Link is current 1`] = `
.pf-c-breadcrumb__link.pf-m-current {
  display: block;
  font-size: inherit;
  font-weight: 500;
  line-height: inherit;
  color: #393f44;
  text-decoration: none;
  cursor: default;
}

<a
  aria-current="page"
  className="pf-c-breadcrumb__link pf-m-current"
  href="#"
>
  Section Link
</a>
`;

exports[`Breadcrumb List 1`] = `
.pf-c-breadcrumb__list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

<ol
  className="pf-c-breadcrumb__list"
>
  <BreadcrumbItem
    className=""
  >
    Section
  </BreadcrumbItem>
</ol>
`;

exports[`Breadcrumb with Heading 1`] = `
.pf-c-breadcrumb {
  display: inline-flex;
}

<nav
  className="pf-c-breadcrumb"
>
  <BreadcrumbList
    className=""
  >
    <BreadcrumbItem
      className=""
    >
      <BreadcrumbLink
        className=""
        href="#"
        isCurrent={false}
      >
        Section Home
      </BreadcrumbLink>
      <BreadcrumbItemDivider
        className=""
      />
    </BreadcrumbItem>
    <BreadcrumbItem
      className=""
    >
      <BreadcrumbLink
        className=""
        href="#"
        isCurrent={true}
      >
        Section Title
      </BreadcrumbLink>
    </BreadcrumbItem>
  </BreadcrumbList>
</nav>
`;

exports[`Breadcrumb without Home Link 1`] = `
.pf-c-breadcrumb {
  display: inline-flex;
}

<nav
  className="pf-c-breadcrumb"
>
  <BreadcrumbList
    className=""
  >
    <BreadcrumbItem
      className=""
    >
      Section Home
      <BreadcrumbItemDivider
        className=""
      />
    </BreadcrumbItem>
    <BreadcrumbItem
      className=""
    >
      <BreadcrumbLink
        className=""
        href="#"
        isCurrent={true}
      >
        Section Title
      </BreadcrumbLink>
    </BreadcrumbItem>
  </BreadcrumbList>
</nav>
`;
